Add concurrency limit and cancel to job...
...the logic here being and every job producing the same tag in this scenario.
So there's no benefit to run every single build that would be triggered if PRs are merged sequentially.
This will ensure only the "final" PR that was merged in a series of merges should build.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,15 +7,17 @@ on:
     tags:
       - 'v*'
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 permissions:
   contents: write # Upload artefacts to release.
   id-token: write # required by read-vault-secrets.
 
 jobs:
-
   publish-public:
     runs-on: ubuntu-latest
-    
     steps:
     - name: Load Secrets from Vault
       uses: rancher-eio/read-vault-secrets@main
