--- a/.github/workflows/head-build.yml
+++ b/.github/workflows/head-build.yml
@@ -47,6 +47,7 @@ jobs:
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
 
       - name: Load Secrets from Vault
+        if: ${{ github.repository == 'rancher/shell' }}
         uses: rancher-eio/read-vault-secrets@main
         with:
           secrets: |
