--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,6 +30,9 @@ jobs:
       id: semver_check
       run: |
         tag="${{ github.ref_name }}"
+        if [[ "$tag" == v* ]]; then
+          tag="${tag:1}"
+        fi
         has_prerelease() { [[ "$1" =~ ^[0-9]+\.[0-9]+\.[0-9]+- ]]; }
         has_build_meta() { [[ "$1" =~ \+ ]]; }
 
