--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -4,6 +4,8 @@
   ],
   "baseBranchPatterns": [
     "main",
+    "release/v2.13",
+    "release/v2.12",
     "release/v2.11",
     "release/v2.10",
     "release/v2.9"
@@ -12,11 +14,26 @@
   "packageRules": [
     {
       "matchBaseBranches": [
-        "main",
-        "release/v2.12"
+        "main"
       ],
       "extends": [
         "github>rancher/renovate-config:rancher-main#release"
+      ]
+    },
+    {
+      "matchBaseBranches": [
+        "release/v2.13"
+      ],
+      "extends": [
+        "github>rancher/renovate-config:rancher-2.13#release"
+      ]
+    },
+    {
+      "matchBaseBranches": [
+        "release/v2.12"
+      ],
+      "extends": [
+        "github>rancher/renovate-config:rancher-2.12#release"
       ]
     },
     {
